| Summary: | ASTERISK-25982: [patch]res_fax/t38_gateway: Peer V.21 session is created on wrong channel | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2016-05-02 16:52:17 | Date Closed: | 2016-09-23 14:25:58 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_fax |
| Versions: | 13.8.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The channel and peer V.21 sessions are created on the same channel
when creating a new fax gateway. The peer V.21 session should be created only on bridged channel when both channel support T.38. Also need enable debug for T.38 gateway session if global fax debug enabled. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-05-02 16:52:17.780-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||